tests/gtests/negative/validation/03_duplicate_action_ids.gtest
#SET OUT=${WORK_DIR}/duplicate_action_ids.json
#RUN greentic-component test --wasm ${REPO_ROOT}/target/wasm32-wasip2/release/component_adaptive_card.wasm --manifest ${REPO_ROOT}/component.manifest.json --op card --input-json '{"validation_mode":"error","card_spec":{"inline_json":{"type":"AdaptiveCard","version":"1.3","body":[],"actions":[{"type":"Action.Submit","id":"go"},{"type":"Action.Submit","id":"go"}]}}}'
#EXPECT_EXIT 0
#CAPTURE_JSON > ${OUT}
#EXPECT_JSONPATH ${OUT} error.code equals AC_CARD_VALIDATION_FAILED
#EXPECT_JSONPATH ${OUT} error.details.validation_issues[*].code contains duplicate-action-id
#SAVE_ARTIFACT ${OUT}
